# CANDID

./: README.md  axcir.py  candid.py  candidTest.py  cvis.c  cyvis.pyx  dpfit.py  dpfunc.py  pyproject.toml  setup.py
candid/: __init__.py
candid/demo/: axcir.py
