[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.package-data]
candid = ["demo/*.oifits"]

[project]
name = "candid"
version = "1.0.7"
requires-python = ">=3.7"
readme = "README.md"
authors = [
    {name = "Antoine Mérand", email = "amerand@eso.org"},
    {name = "Alexandre Gallenne"},
]
dependencies = [
    "scipy", "numpy", "matplotlib", "astropy",
]



